# ptax-project-update

./: .gitignore  README.md  batch_generate.py  bug_fix.md  cover_page_summary_facts.R  create_output.sh  create_tif_rds.R  helper_funcs.R  helper_funcs.r  landing_page.r  maps.R  precalculate.r  ptaxism_explainer_tif.Rmd  ptaxsim_explainer.qmd  ptaxsim_explainer_draft_flow.md  ptaxsim_explainer_tif.Rmd  ptaxsim_explainer_tif.qmd  ptaxsim_explainer_update.qmd  ptaxsim_explainer_update_as.qmd  ptaxsim_explainer_update_final.qmd  pyproject.toml  search_terms.txt  tif_qmd_functions.R
app/: main.py
app/assets/: index.js  style.css
app/templates/: _base.html  _base_index.html  choose_pin.html  index.html  index_ptax.html  index_tif.html  message.html  processing.html
map_options/: map_dist_options.r  map_options.html  map_options.qmd
outputs/v1.1/cicero/: ptaxsim_explainer_update.html
outputs/v1.1/evanston/: ptaxsim_explainer_update.html
outputs/v1.1/hyde_park_noexe_chicago/: ptaxsim_explainer_update.html
outputs/v1.1/kinzie_nonrpmtif_chicago/: ptaxsim_explainer_update.html
outputs/v1.1/riverside_multitwnmuni/: ptaxsim_explainer_update.html
outputs/v1.1/wrightwood_rpmtif_chicago/: ptaxsim_explainer_update.html
outputs/v1.2/cicero/: ptaxsim_explainer_update.html
outputs/v1.2/evanston/: ptaxsim_explainer_update.html
outputs/v2.0/: 16123090200000.html  20114070180000.html
outputs/v2.0.0/: 17221070890000.html  20114070180000.html
renv/: .gitignore
scripts/: try_gcs_upload.py
test_server/: compare_outputs.py  locustfile.py  test_pins.txt
(+10 files in other folders)
